--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -39,7 +39,7 @@ jobs:
         run: npm install
 
       - name: Check style
-        run: npm run eslint
+        run: npm run lint
 
       - name: Build Application
         run: npm run build:ui
