--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,7 +42,7 @@ jobs:
         run: npm run lint
 
       - name: Build Application
-        run: npm run build:ui
+        run: rm -rf dist && cd ./frontend && npm run build && cp -r dist ../
 
       - name: "Deploy to Azure WebApp"
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') }}
