--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,5 +25,8 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "json-server": "^0.17.4",
     "vite": "^5.0.8"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
