--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,7 +9,7 @@ on:
     types: [opened, synchronize]
 
 env:
-  AZURE_WEBAPP_NAME: PokedexCICDLinux
+  AZURE_WEBAPP_NAME: PhonebookLinux
   AZURE_WEBAPP_PACKAGE_PATH: "."
   NODE_VERSION: "20.x"
 
